fixed storeprompt overlap issue on x-sm

--- a/components/authlayout/sidebar.module.scss
+++ b/components/authlayout/sidebar.module.scss
@@ -5,6 +5,7 @@
 	max-height: 90vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
+	// border: 2px solid red;
 
 	.menu {
 		border: none;
@@ -153,12 +154,19 @@
 .mobileSideBar {
 	// border: 1px solid red;
 	// max-width: 372px;
-	max-width: 333px;
+	max-width: 343px;
 	height: 100%;
 	// margin-top: 6.2rem;
 	background-color: #ffffff;
 	z-index: 900;
 	position: absolute;
+
+	@media (max-width: 360px) {
+		max-width: 323px;
+	}
+	@media (max-width: 320px) {
+		max-width: 270px;
+	}
 
 	.profile {
 		// border: 1px solid black;
